style.css
.nav {
  display: block;
  list-style: none;
}

.topNav {
  background-color: black;
}

.topNav ul {
  display: flex;
  justify-content: flex-end;
}

.secondNav ul {
  display: flex;
  justify-content: flex-end;
}

#active,
#active-btn {
  color: #ec5242;
}

#active-btn:hover {
  background-color: #272a31;
}

.nav-item a {
  color: #272a31;
}

.btn {
  border: 4px solid #ec5242;
  padding: 0.5em;
  color: #ec5242;
  margin-left: 2em;
}

.contents {
  margin: 0 auto;
  min-width: 10%;
  padding: 5em;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  overflow: hidden;
}

.jumbo {
  max-width: 100%;
  height: auto;
  overflow: hidden;
}

.jumbo h4 {
  color: #ec5242;
  font-size: 1.5rem;
  margin: 0 auto;
}

.jumbo h1 {
  font-family: cocogoose, sans-serif;
  color: #ec5242;
  font-size: 3rem;
  line-height: 1.2;
  margin: 0 auto;
  margin-top: 0.5em;
  text-align: center;
}

.jumbo p {
  color: #272a31;
  line-height: 1.5;
  margin: 0 auto;
  margin-top: 2em;
  border: 2px solid white;
  padding: 1em;
  width: 60%;
  font-weight: bolder;
  text-align: center;
}

.jumbo h2 {
  font-size: 1.5rem;
  margin: 0 auto;
  margin-top: 2em;
  color: #272a31;
  font-family: cocogoose, sans-serif;
  text-transform: uppercase;
}

.side {
  background-color: black;
}

.side .h2 {
  color: white;
  text-align: center;
}

#oth {
  color: white;
}

.hr {
  margin-top: 10px;
  border: 1px solid #ec5242;
  border-radius: 5px;
  width: 3vw;
}

.card-deck {
  padding: 10px;
}

.card {
  display: flex;
  justify-content: center;
}

.card-deck .card {
  margin-bottom: 10px;
  padding-top: 10px;
}

.card-deck img {
  height: 50px;
  width: 50px;
}

.card-deck .card-img-top {
  width: 5vw;
  height: 5vh;
  display: flex;
  margin: auto;
}

.image-container {
  height: 260px;
  width: 200px;
  align-items: center;
}

.partners {
  background-color: #272a31;
  color: #d3d3d3;
}

.part-list li {
  padding: 2em;
  font-size: 1.2rem;
}

.partners .title {
  margin: 0 auto;
  font-size: 2rem;
  text-align: center;
}

.part-list {
  display: flex;
  margin: 0 auto;
  flex-direction: row;
}

.footer {
  display: flex;
  justify-content: space-around;
  padding: 2em;
  align-items: center;
}

.footer-about {
  margin-right: 15em;
}

.main-event,
.about-event {
  background:
    linear-gradient(to bottom, rgba(73, 70, 70, 0.9), rgba(143, 119, 119, 0.966)),
    url('./images/doof.jpg') no-repeat center center/cover;
}

.container {
  margin: 0 auto;
  min-width: 10%;
  padding: 5em;
  display: flex;
  flex-direction: column;
}

.container .logo {
  margin-left: auto;
  margin-right: auto;
  width: 300px;
  height: 200px;
  border: 1px solid rgb(215, 215, 233);
  box-shadow: 3px 4px 10px #bdbbbb;
  box-sizing: border-box;
}

.container h1 {
  margin-left: auto;
  margin-right: auto;
  color: red;
  font-weight: bolder;
}

.container h2 {
  text-align: center;
}

.container p {
  text-align: center;
}

.logo img {
  margin: 20px 10px;
  float: left;
}

.about-logo h2 {
  margin: 0 auto;
  display: block;
  font-size: 1.5em;
  margin-block-start: 0.83em;
  margin-block-end: 0.83em;
  margin-inline-start: 0;
  margin-inline-end: 0;
  font-weight: bold;
}

.jumbo h3 {
  margin: 0 auto;
  margin-top: 1em;
  color: #272a31;
  line-height: 1.2;
  font-size: 1.2rem;
}

.tik h3 {
  margin-left: auto;
  margin-right: auto;
}

.about-logo .logo-text h3 {
  display: block;
  font-size: 1.5em;
  padding-left: 115px;
  font-weight: bold;
}

.about-logo .logo-text h4 {
  display: block;
  font-size: 1.5em;
  padding-left: 115px;
  padding-top: 1px;
}

.container h6 {
  margin-left: auto;
  margin-right: auto;
}

.container a {
  margin-left: auto;
  margin-right: auto;
  text-decoration: underline;
  color: black;
  font-weight: 900;
}

hr {
  margin-top: 10px;
  border: 1px solid #ec5242;
  border-radius: 5px;
  width: 3vw;
}

.tickets-select::before {
  content: '\25C6';
  color: #ec5242;
  padding-right: 5px;
}

.tickets-select {
  border: 1px solid rgb(214, 210, 210);
  padding: 1em;
  border-radius: 20px;
  margin: 0 auto;
  margin-top: 3em;
}

.lunch-select {
  border: 1px solid rgb(214, 210, 210);
  padding: 1em;
  border-radius: 30px;
  margin: 0 auto;
  margin-top: 3em;
}

.lunch-select::before {
  content: '\25C6';
  color: #ec5242;
  padding-right: 5px;
  text-decoration: tomato;
}

.lt .li {
  float: left;
  list-style: none;
}

#dd {
  color: white;
}

#ex {
  width: auto;
  block-size: auto;
}

.chef-image {
  display: block;
  width: 100px;
  height: 100px;
  object-fit: contain;
}

.tbl {
  border: 6px solid red;
  border-image: radial-gradient(rgb(221, 4, 4), rgb(243, 238, 239)) 1;
  margin-left: auto;
  margin-right: auto;
  width: 70%;
  height: 60%;
  grid-template-columns: 1fr 1.5fr 2fr 1.5fr;
}

.box {
  background-color: #ec5242;
  width: 50px;
  height: 50px;
  transform: rotate(45deg);
  margin: 0 auto;
  margin-top: -0.8em;
}

.fa-chevron-down {
  transform: rotate(305deg);
  padding: 1em;
  color: white;
}

.lunch .h6 {
  border: 1px solid rgb(214, 210, 210);
  padding: 1em;
  border-radius: 20px;
  margin: 0 auto;
  margin-top: 3em;
}

.tik {
  background: #e2dddd;
}

.lunch-ticket-1,
.lunch-ticket-2 {
  margin: 0 auto;
  margin-top: 4em;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.lunch-ticket-1 .li {
  display: inline;
}

.lunch-ticket .li {
  display: inline;
  justify-content: space-around;
  padding: 0;
}

.gr {
  background-color: #f5efef;
  height: 5vh;
}

.lunch-ticket {
  display: flex;
  justify-content: space-around;
}

.footer-logo-text {
  width: auto;
  block-size: auto;
}

.button {
  background-color: #ec5242;
  color: white;
  padding: 1em 3em;
  text-transform: uppercase;
  margin: 0 auto;
  margin-top: 2em;
  font-weight: bold;
  position: sticky;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 20%;
  left: 45%;
}

.button:hover { background-color: #272a31; }

@media (min-width: 992px) {
  .chef-image { min-width: 30%; }

  .card-body { min-width: 50%; }

  .btn { padding: 0.5em; }

  #part-container { padding: 2em; }

  .secondNav { padding: 0.5em; }
}

@media (max-width: 576px) {
  .footer { display: inline-block; }

  .lt { flex-direction: column; }

  .tbl {
    display: grid;
    grid-template-columns: 1fr;
  }

  @media (max-width: 768px) {
    .about-logo .logo {
      padding: 2em;
    }

    .footer .bg-dark {
      display: inline-block;
    }
  }

  @media (max-width: 480px) {
    .footer .bg-dark {
      display: inline-block;
    }
  }

  @media (max-width: 576px) {
    .footer { display: inline-block; }
  }

  @media (max-width: 480px) {
    .part-list {
      flex-direction: column;
    }
  }

  @media (max-width: 768px) {
    .part-list {
      flex-direction: column;
      display: inline-block;
    }
  }

  .jumbo p {
    line-height: 1;
    width: 80%;
  }
}

@media (max-width: 768px) {
  .card-deck {
    display: grid;
    grid-template-columns: 1fr;
  }
}

@media (max-width: 576px) {
  .tbl {
    display: grid;
    grid-template-columns: 1fr;
    margin-left: -10%;
  }
}

@media (max-width: 768px) {
  .menu-btn {
    display: block;
    position: absolute;
    top: 1.5em;
    left: 1em;
    color: #272a31;
  }
}

